# swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "version": "1.0.0",
-        "title": "Twitter API",
+        "title": "BandIt API",
         "description": "",
         "license": {
             "name": "MIT",
@@ -137,6 +137,7 @@
     "definitions": {
         "User": {
             "required": [
+                "name",
                 "email",
                 "_id"
             ],
@@ -145,7 +146,33 @@
                     "type": "string",
                     "uniqueItems": true
                 },
+                "name": {
+                    "type": "string",
+                    "uniqueItems": true
+                },
                 "email": {
+                    "type": "string",
+                    "uniqueItems": true
+                },
+                "age": {
+                    "type": "string"
+                },
+                "instrument": {
+                    "type": "array"
+                }
+            }
+        },
+        "Band": {
+            "required": [
+                "name",
+                "_id"
+            ],
+            "properties": {
+                "_id": {
+                    "type": "string",
+                    "uniqueItems": true
+                },
+                "name": {
                     "type": "string",
                     "uniqueItems": true
                 },
